tests/invalid/type/empty_map_no_context.pts
function main() : void {
    var m = {};
}
